manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-deployment
  labels:
    app: pyapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
      - name: pyapp
        image: pyapp:0.0.3
        ports:
        - containerPort: 5000
