manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  labels:
    app: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox
        image: adriancovaciu/hivebox:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
