manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp-service
spec:
  selector:
    app: pyapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
