manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp-ingress
spec:
  rules:
  - host: pyapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyapp-service
            port:
              number: 8080
